# daily-news-summary

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  REQUIREMENTS.md  daily_news.py  preview.html  pyproject.toml  send_news.py  test_claude.py  test_rss.py
.githooks/: pre-commit
.github/workflows/: daily_news.yml
docs/: CONTEXT.md  REQUIREMENTS.md
scripts/: get_refresh_token.py
src/: claude_client.py  config.py  daily_news.py  digest.py  email_pipeline.py  mailer.py  renderer.py  telegram_pipeline.py
src/core/: claude_client.py  config.py  digest.py  gas_prices.py  llm_client.py  mailer.py  renderer.py  rss.py  stock_market.py
src/pipelines/: email_pipeline.py  telegram_pipeline.py
src/prompts/: email_digest.md
src/templates/: email.html
tests/: test_claude.py  test_deals.py  test_email.py  test_images.py  test_integration.py  test_llm.py  test_rss.py
tests/unit/: test_digest.py  test_llm_client.py  test_renderer.py  test_rss.py  test_stock_market.py  test_strip_fences.py  test_validate.py
